Renamed target to falling_sand_bevy

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,13 +18,13 @@
             "cargo": {
                 "args": [
                     "build",
-                    "--bin=bevy_game",
-                    "--package=bevy_game",
+                    "--bin=falling_sand_game",
+                    "--package=falling_sand_game",
                     "--features",
                     "dev"
                 ],
                 "filter": {
-                    "name": "bevy_game",
+                    "name": "falling_sand_game",
                     "kind": "bin"
                 },
             },
@@ -47,13 +47,13 @@
                 "args": [
                     "test",
                     "--no-run",
-                    "--bin=bevy_game",
-                    "--package=bevy_game",
+                    "--bin=falling_sand_game",
+                    "--package=falling_sand_game",
                     "--features",
                     "dev"
                 ],
                 "filter": {
-                    "name": "bevy_game",
+                    "name": "falling_sand_game",
                     "kind": "bin"
                 }
             },
