--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,33 +12,54 @@ opt-level = 3
 [profile.dev]
 opt-level = 1
 
-[profile.release]
-lto = true
-codegen-units = 1
-
-# The profile that 'cargo dist' will build with
+# Profile for distribution
 [profile.dist]
 inherits = "release"
-lto = "thin"
+opt-level = 3
+lto = true
+codegen-units = 1
+strip = true
 
 [features]
-dev = ["bevy/bevy_dylib"]
-
-# Bevy defaults minus audio and some other not needed things
-# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
-default = ["bevy/animation", "bevy/bevy_asset", "bevy/bevy_scene", "bevy/bevy_winit", "bevy/bevy_core_pipeline", "bevy/bevy_pbr", "bevy/bevy_gltf", "bevy/bevy_render", "bevy/bevy_sprite", "bevy/bevy_text", "bevy/bevy_ui", "bevy/png", "bevy/hdr", "bevy/zstd", "bevy/x11", "bevy/ktx2", "bevy/filesystem_watcher", "bevy/tonemapping_luts"]
+dev = [
+    "bevy/dynamic_linking",
+]
 
 [dependencies]
-bevy = { version = "0.10", default-features = false }
-bevy_kira_audio = { version = "0.15" }
-bevy_asset_loader = { version = "0.15" }
+bevy = { version = "0.13", default-features = false, features = [
+    "animation",
+    "bevy_asset",
+    "bevy_gilrs",
+    "bevy_scene",
+    "bevy_winit",
+    "bevy_core_pipeline",
+    "bevy_pbr",
+    "bevy_gltf",
+    "bevy_render",
+    "bevy_sprite",
+    "bevy_text",
+    "bevy_ui",
+    "multi-threaded",
+    "png",
+    "hdr",
+    "x11",
+    "bevy_gizmos",
+    "tonemapping_luts",
+    "default_font",
+    "webgl2",
+    "bevy_debug_stepping",
+] }
+bevy_kira_audio = { version = "0.19" }
+bevy_asset_loader = { version = "0.20" }
 rand = { version = "0.8.3" }
+webbrowser = { version = "0.8", features = ["hardened"] }
 
 # keep the following in sync with Bevy's dependencies
-winit = { version = "0.28", default-features = false }
+winit = { version = "0.29", default-features = false }
 image = { version = "0.24", default-features = false }
-bytemuck = "1.14.0"
+
+bytemuck = "1.14"
 parking_lot = "0.12"
 
 [build-dependencies]
-embed-resource = "1.4"
+embed-resource = "1"
